--- a/TrekBuddy/app/src/main/AndroidManifest.xml
+++ b/TrekBuddy/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
             android:name=".NavigationActivity"
             android:exported="false"
             android:label="@string/title_activity_navigation" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${GOOGLE_MAPS_API_KEY}" />
+
         <activity
         android:name=".RegisterActivity"
         android:exported="false" />
