--- a/TrekBuddy/app/src/main/AndroidManifest.xml
+++ b/TrekBuddy/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> <!--추가됨 gh-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>   <!--추가됨 gh-->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,16 +13,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrekBuddy"
         tools:targetApi="31">
+
         <activity
             android:name=".NavigationActivity"
             android:exported="false"
             android:label="@string/title_activity_navigation" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${GOOGLE_MAPS_API_KEY}" />
+
         <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
+        android:name=".RegisterActivity"
+        android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
